--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <title>Myntra Clone</title>
-    <link rel="stylesheet" href="/MyntraClone/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <div class="logo_container">
-            <a href="#"><img class="myntra_home" src="" alt="Myntra Home"></a>
+            <a href="#"><img class="myntra_home" src="./img/logo.jpeg" alt="Myntra Home"></a>
         </div>
         <nav class="nav_bar">
             <a href="#">Men</a>
@@ -62,16 +62,16 @@
 
         <div class="category_heading">SHOP BY CATEGORY</div>
         <div class="category_items">
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=".jpg"></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
-            <a href="#"><img class="sale_item" src=""></a>
+            <a href="#"><img class="sale_item" src="img/offers/1.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/2.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/3.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/4.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/5.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/6.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/7.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/8.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/9.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/10.png"></a>
         </div>
     </main>
     <footer>
