--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         <hr>
 
         <div class="copyright">
-            © 2023 www.myntra.com. All rights reserved.
+            Designed by Garvit Srivastava ©2024 All rights reserved.
+            Myntra Clone
         </div>
     </footer>
 </body>
