--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Myntra Clone</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
     <header>
         <div class="logo_container">
@@ -45,33 +50,33 @@
         </div>
         <div class="category_heading">MEDAL WORTHY BRANDS TO BAG</div>
         <div class="category_items">
-            <a href="#"><img class="sale_item" src="img/categories/1.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/2.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/3.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/4.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/5.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/6.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/7.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/8.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/9.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/10.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/11.PNG"></a>
-            <a href="#"><img class="sale_item" src="img/categories/12.PNG"></a>
+            <a href="#"><img class="sale_item" src="img/categories/1.PNG" alt="1"></a>
+            <a href="#"><img class="sale_item" src="img/categories/2.PNG" alt="2"></a>
+            <a href="#"><img class="sale_item" src="img/categories/3.PNG" alt="3"></a>
+            <a href="#"><img class="sale_item" src="img/categories/4.PNG" alt="4"></a>
+            <a href="#"><img class="sale_item" src="img/categories/5.PNG" alt="5"></a>
+            <a href="#"><img class="sale_item" src="img/categories/6.PNG" alt="6"></a>
+            <a href="#"><img class="sale_item" src="img/categories/7.PNG" alt="7"></a>
+            <a href="#"><img class="sale_item" src="img/categories/8.PNG" alt="8"></a>
+            <a href="#"><img class="sale_item" src="img/categories/9.PNG" alt="9"></a>
+            <a href="#"><img class="sale_item" src="img/categories/10.PNG" alt="10"></a>
+            <a href="#"><img class="sale_item" src="img/categories/11.PNG" alt="11"></a>
+            <a href="#"><img class="sale_item" src="img/categories/12.PNG" alt="12"></a>
 
         </div>
 
         <div class="category_heading">SHOP BY CATEGORY</div>
         <div class="category_items">
-            <a href="#"><img class="sale_item" src="img/offers/1.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/2.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/3.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/4.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/5.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/6.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/7.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/8.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/9.png"></a>
-            <a href="#"><img class="sale_item" src="img/offers/10.png"></a>
+            <a href="#"><img class="sale_item" src="img/offers/1.png" alt="offer1"></a>
+            <a href="#"><img class="sale_item" src="img/offers/2.png" alt="offer2"></a>
+            <a href="#"><img class="sale_item" src="img/offers/3.png" alt="offer3"></a>
+            <a href="#"><img class="sale_item" src="img/offers/4.png" alt="offer4"></a>
+            <a href="#"><img class="sale_item" src="img/offers/5.png" alt="offer5"></a>
+            <a href="#"><img class="sale_item" src="img/offers/6.png" alt="offer6"></a>
+            <a href="#"><img class="sale_item" src="img/offers/7.png" alt="offer7"></a>
+            <a href="#"><img class="sale_item" src="img/offers/8.png" alt="offer8"></a>
+            <a href="#"><img class="sale_item" src="img/offers/9.png" alt="offer9"></a>
+            <a href="#"><img class="sale_item" src="img/offers/10.png" alt="offer10"></a>
         </div>
     </main>
     <footer>
@@ -100,18 +105,8 @@
                 <a href="#">Myntra Insider</a>
             </div>
 
-            <div class="footer_column">
-                <h3>ONLINE SHOPPING</h3>
-
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Home & Living</a>
-                <a href="#">Beauty</a>
-                <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
-            </div>
         </div>
+
         <hr>
 
         <div class="copyright">
@@ -120,4 +115,5 @@
         </div>
     </footer>
 </body>
+
 </html>
