--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 
@@ -17,12 +19,12 @@
             <a href="#"><img class="myntra_home" src="./img/logo.jpeg" alt="Myntra Home"></a>
         </div>
         <nav class="nav_bar">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Kids</a>
-            <a href="#">Home & Living</a>
-            <a href="#">Beauty</a>
-            <a href="#">Studio <sup>New</sup></a>
+            <a href="https://www.myntra.com/shop/men">Men</a>
+            <a href="https://www.myntra.com/shop/women">Women</a>
+            <a href="https://www.myntra.com/shop/kids">Kids</a>
+            <a href="https://www.myntra.com/shop/home-living">Home & Living</a>
+            <a href="https://www.myntra.com/personal-care">Beauty</a>
+            <a href="https://www.myntra.com/studio/home">Studio<sup>New</sup></a>
         </nav>
         <div class="search_bar">
             <span class="material-symbols-outlined search_icon">search</span>
@@ -84,26 +86,25 @@
         <div class="footer_container">
             <div class="footer_column">
                 <h3>ONLINE SHOPPING</h3>
-
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Home & Living</a>
-                <a href="#">Beauty</a>
-                <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="https://www.myntra.com/shop/men">Men</a>
+                <a href="https://www.myntra.com/shop/women">Women</a>
+                <a href="https://www.myntra.com/shop/kids">Kids</a>
+                <a href="https://www.myntra.com/shop/home-living">Home & Living</a>
+                <a href="https://www.myntra.com/personal-care">Beauty</a>
+                <a href="https://www.myntra.com/giftcard">Gift Card</a>
+                <a href="https://www.myntra.com/myntrainsider">Myntra Insider</a>
             </div>
 
             <div class="footer_column">
-                <h3>ONLINE SHOPPING</h3>
+                <h3>CUSTOMER POLICIES</h3>
 
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Home & Living</a>
-                <a href="#">Beauty</a>
-                <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Blog</a>
+                <a href="#">FAQs</a>
+                <a href="#">Shipping</a>
+                <a href="#">TOS</a>
+                <a href="#">Track Orders</a>
+                <a href="#">Site Map</a>
             </div>
 
         </div>
@@ -111,8 +112,7 @@
         <hr>
 
         <div class="copyright">
-            Designed by Garvit Srivastava ©2024 All rights reserved.
-            Myntra Clone
+            Designed by Garvit Srivastava ©2024 All rights reserved, Myntra-Clone.
         </div>
     </footer>
 </body>
