--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="banner_container">
             <img class="banner_image" src="img/banner.jpeg" alt="Main Banner">
         </div>
-        <div class="category_heading">MEDAL WORTHY BRANDS TO BAG</div>
+        <div class="category_heading">WORTHY BRANDS TO BAG</div>
         <div class="category_items">
             <a href="#"><img class="sale_item" src="img/categories/1.PNG" alt="1"></a>
             <a href="#"><img class="sale_item" src="img/categories/2.PNG" alt="2"></a>
